Fix upcoming event cards on Insights Overview looking too large when there are less than 3

--- a/version_control/Codurance_September2020/css/modules/simple-card.css
+++ b/version_control/Codurance_September2020/css/modules/simple-card.css
@@ -10,6 +10,12 @@
     scrollbar-width: none;
 }
 
+{% call utils.medium_large_and_extra_large() %}
+    .card-container--hubdb {
+        grid-template-columns: repeat(3, 1fr);
+    }
+{% endcall %}
+
 .card-container::-webkit-scrollbar {
     display: none;
 }
